000 - fix bug for menu top on mobile

--- a/components/soccer/table/style.scss
+++ b/components/soccer/table/style.scss
@@ -15,5 +15,6 @@
         position: fixed;
         width: 100%;
         top: 0;
+        z-index: 100;
     }
 }
